<resources>
    <string name="app_name">MongolFriday Photos</string>

    <string name="Source_photos_from">Source photos are from:</string>
    <string name="UrlMongolFridayFotos">http://www.machacas.com/category/mongol-friday-photos/</string>
    <string name="Colaboration">Colaboration:</string>
    <string name="UrlMacahcasyBecarios">http://www.machacas.com</string>
    <string name="Develop">Developed by:</string>
    <string name="Developer">_espi_</string>
    <string name="Used_librabries">Libraries used on develop:</string>
    <string name="JsoupText">jsoup-1.7.2</string>
    <string name="JsoupUrl">http://jsoup.org/download</string>
    <string name="universalimageloadarText">universal-image-loader-1.9.3</string>
    <string name="universalimageloaderUrl">https://github.com/nostra13/Android-Universal-Image-Loader</string>
    <string name="gestureimageviewText">gesture-imageview</string>
    <string name="gestureimageviewUrl">https://github.com/jasonpolites/gesture-imageview</string>
    <string name="action_about">About</string>
    <string name="title_actjivity_about">About</string>
    <string name="action_settings">Settings</string>
</resources>
