<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.espipinxo.mongolfriday.About">

          <TextView android:text="@string/Source_photos_from" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ffffff" />
<TextView android:text="@string/UrlMongolFridayFotos" android:textColor="#ffffff" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:linksClickable="true" android:autoLink="web"/>
        <TextView android:text="@string/Colaboration" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ffffff" />
    <TextView android:text="@string/UrlMacahcasyBecarios" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" android:autoLink="web" android:linksClickable="true"/>
        <TextView android:text="@string/Develop" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ffffff" />

        <TextView android:text="@string/Developer" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ffffff" />

        <TextView android:text="@string/Used_librabries" android:layout_width="147dp"
            android:layout_height="wrap_content" android:textColor="#ffffff" />

        <TextView android:text="@string/JsoupText" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ffffff" />
    <TextView android:text="@string/JsoupUrl" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" android:autoLink="web" android:linksClickable="true" />
    <TextView android:text="@string/universalimageloadarText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" />
    <TextView android:text="@string/universalimageloaderUrl" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" android:autoLink="web" android:linksClickable="true" />
    <TextView android:text="@string/gestureimageviewText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" />
    <TextView android:text="@string/gestureimageviewUrl" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textColor="#ffffff" android:autoLink="web" android:linksClickable="true" />
</LinearLayout>
